@@ -44,7 +44,9 @@ malloc
 realloc
 free
 serial
-serial_io
+inituart
+_putchar
+_getchar
 _autobaud
 _startup
 _ser
